--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.2"
+    "bcrypt": "^3.0.1",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.12",
+    "hbs": "^4.0.1",
+    "mongoose": "^5.2.17",
+    "path": "^0.12.7",
+    "underscore": "^1.9.1"
   }
 }
